Prelimary changes to get clang building on arm * a hacked up build enviroment is needed. it must have ld from binutils 2.22 (but not as) to run clang requires both as and binutils from 2.22
(best way to accomplish this is copy several binaries
to a path that the OpenBSD gcc will find them)
ie /usr/lib/gcc-lib/arm-unknown-openbsd5.2/4.2.1
in that dir I have as ld and nm (dont recall why nm) as well as collect2
libgcc.a cc1obj cc1plus and cc1 from the original openbsd compiler.

then to build...

ulimit -d 1048576
sudo make fake # (this will fail)

sudo mkdir -p /usr/ports/pobj/bitrig-llvm-3.3/build-arm/lib/clang/3.3/lib/bitrig
sudo cp /usr/lib/libclang_rt.arm.a  /usr/ports/pobj/bitrig-llvm-3.3/build-arm/lib/clang/3.3/lib/bitrig/libclang_rt.arm.a

sudo make fake # (this will fail)

sudo cp /usr/lib/libclang_rt.arm.a  /usr/ports/pobj/bitrig-llvm-3.3/fake-beagle/usr/lib/libclang_rt.arm.a
sudo mkdir -p /usr/ports/pobj/bitrig-llvm-3.3/fake-beagle/usr/lib/clang/3.3/lib/bitrig
sudo cp /usr/lib/libclang_rt.arm.a  /usr/ports/pobj/bitrig-llvm-3.3/fake-beagle/usr/lib/clang/3.3/lib/bitrig/libclang_rt.arm.a

sudo make package # (this should succeed)

--- a/bitrig/bitrig-llvm/Makefile
+++ b/bitrig/bitrig-llvm/Makefile
@@ -50,10 +50,15 @@ SEPARATE_BUILD =	Yes
 PREFIX=			/usr
 CONFIGURE_ARGS =	-DLLVM_ENABLE_FFI:Bool=False \
 			-DLLVM_REQUIRES_RTTI:Bool=True \
-			-DLLVM_TARGETS_TO_BUILD:String="ARM;X86" \
 			-DCMAKE_INSTALL_PREFIX:PATH=${PREFIX} \
 			-DCMAKE_BUILD_TYPE:String=Release \
 			-DCMAKE_DISABLE_FIND_PACKAGE_LibXml2:Bool=True
+
+.if ${MACHINE_ARCH:Marm}
+CONFIGURE_ARGS +=      -DLLVM_TARGETS_TO_BUILD:String="ARM"
+.else
+CONFIGURE_ARGS +=      -DLLVM_TARGETS_TO_BUILD:String="ARM;X86"
+.endif
 
 CLANG_INCLUDE_PATH =	lib/clang/${LLVM_V}/include
 SUBST_VARS +=		CLANG_INCLUDE_PATH LLVM_V
